--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
     <body>
-        <a href="lab1/shkutyak_lab1.html"></a>
+        <a href="lab1/shkutyak_lab1.html">Лабораторна 1</a>
     </body>
 </html>
