--- a/lab1/html/shkutyak_example3.html
+++ b/lab1/html/shkutyak_example3.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Приклад №3</title>
-        <link rel="stylesheet" href="../style/shkutyak_style.css">
+        <link rel="stylesheet" type="text/css" href="../style/shkutyak_style.css">
     </head>
     <body>
         <p>Колір фону цієї сторінки - голубий</p>
