--- a/lab1/shkutyak_lab1.html
+++ b/lab1/shkutyak_lab1.html
@@ -1,4 +1,3 @@
-
 <html>
     <head>
         <title>Приклади</title>
@@ -26,6 +25,14 @@
             </ul>
         </div>
         <a href="html/shkutyak_example10.html" id="exam10">Приклад 10</a><br>
-        <h4><a href="../index.html">На головну</a></h4>
-    </body>
+        <p><a href="https://www.youtube.com/watch?v=4jYYHaTwWvY">Відео для початківців html!</a></p>
+        <form>
+            <p><b>Поставте оцінку сайту</b><Br>
+            <input type="radio" >1
+            <input type="radio" >2
+            <input type="radio" >3
+            <input type="radio" >4
+            <input type="radio" >5
+        </form>
+    </body> 
 </html>
