--- a/lab1/html/shkutyak_example2.html
+++ b/lab1/html/shkutyak_example2.html
@@ -4,6 +4,7 @@
         <style type="text/css">
         body {background-color: #FF0000;}
         </style>
+    </head>
     <body>
         <p>Колір фону цієї сторінки - червоний</p>
     </body>
