--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
-    <body>
-        <a href="lab1/shkutyak_lab1.html">Лабораторна 1</a>
-    </body>
+<head>
+<meta charset="utf-8">
+<title>Лабораторні роботи</title>
+</head>
+<body>
+<h1>Лабораторні роботи</h1>
+<p><a href="lab1/shkutyak_lab1.html">Лабораторна робота №1</a>
+</body>
 </html>
