--- a/lab2/frames/shkutyak_frame3.html
+++ b/lab2/frames/shkutyak_frame3.html
@@ -3,7 +3,7 @@
         <link rel="stylesheet" href="../style/shkutyak_style3.css">
     </head>
 <body>
-    <img class="gif" src="../gifs/олег.gif">
+    <img class="gif" src="../gifs/вася.gif">
     <div class="biography">
         <p>Петрина Василь Михайлович
         <br>Дата народження: 16.03.2002</p>
