--- a/lab2/frames/shkutyak_frame4.html
+++ b/lab2/frames/shkutyak_frame4.html
@@ -3,7 +3,7 @@
         <link rel="stylesheet" href="../style/shkutyak_style3.css">
     </head>
 <body>
-    <img class="gif" src="../gifs/олег.gif">
+    <img class="gif" src="../gifs/маслоw.gif">
     <div class="biography">
         <p>Маслов Олексій Андрійович
         <br>Дата народження: 21.03.2003</p>
