--- a/lab4/task1/shkutyak.html
+++ b/lab4/task1/shkutyak.html
@@ -5,14 +5,14 @@
     </head>
     <body>
 <div class="header">
-    <h1>TWITCH</h1>
+    <h1>TWITCH&#9773;</h1>
 </div>  
 <div class="main">
 <div class="aside1">
     Twitch — це платформа для онлайн відеотрансляцій, що належить Twitch Interactive, дочірній компанії Amazon.com. Представлений в червні 2011 р. як відгалуження від платформи відеотрансляцій загального поширення, Justin.tv, сайт, в першу чергу, зосереджується на потоковій трансляції відеоігор, включаючи трансляції кіберспортивних змагань, креативного контенту, розділ «реальне життя» та останнім часом музичні передачі. Вміст на сайті можна переглянути в прямому ефірі або за допомогою відео за запитом.
 </div>
 <div class="center">
-    На ранніх етапах популярність Twitch була порівняно невеликою, порівняно з Justin TV, де в жовтні 2013 р. було 45 млн унікальних глядачів. Але до лютого 2014 р. Twitch посів четверте за величиною джерело пікового інтернет-трафіку в США. У той же час материнська компанія Justin.tv була ребрендована як Twitch Interactive, щоб представити зміну напрямку діяльності, Justin.tv був закритий у серпні 2014 року. Twitch був підтриманий одним з найуспішніших американських бізнес-інкубатором Y Combinator та викуплений у серпні 2014 року компанією Amazon за 970 мільйонів доларів США, що пізніше призвело до впровадження синергії з передплатою компанії Amazon Prime. Twitch пізніше придбав Curse, засіб спілкування ігрової спільноти в Інтернеті, і ввів засоби для придбання ігор за допомогою посилань на трансляції, а також програму, яка дозволяє стрімерам отримувати комісію від продажу ігор, які вони грають.
+    На ранніх етапах популярність Twitch була порівняно невеликою, порівняно з Justin TV&trade;, де в жовтні 2013 р. було 45 млн унікальних глядачів. Але до лютого 2014 р. Twitch посів четверте за величиною джерело пікового інтернет-трафіку в США. У той же час материнська компанія Justin.tv була ребрендована як Twitch Interactive, щоб представити зміну напрямку діяльності, Justin.tv був закритий у серпні 2014 року. Twitch був підтриманий одним з найуспішніших американських бізнес-інкубатором Y Combinator та викуплений у серпні 2014 року компанією Amazon за 970 мільйонів доларів США, що пізніше призвело до впровадження синергії з передплатою компанії Amazon Prime. Twitch пізніше придбав Curse, засіб спілкування ігрової спільноти в Інтернеті, і ввів засоби для придбання ігор за допомогою посилань на трансляції, а також програму, яка дозволяє стрімерам отримувати комісію від продажу ігор, які вони грають.
 
 У 2015 році Twitch оголосив, що має більше 1,5 мільйонів мовників та 100 мільйонів користувачів на місяць.
 
@@ -31,7 +31,7 @@
 
 <p>У березні 2017 року Twitch додав канал «IRL», який дозволяє проводити трансляції з будь-яким вмістом.</p>
 
-<p>Розділ, як правило, знаходиться у трійці найбільш популярних.</p>
+<p>Розділ, як правило, знаходиться у трійці найбільш популярних.&#9806;</p>
 </div>  
 
     </body>
