--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <p><a href="lab1/shkutyak_lab1.html">Лабораторна робота №1</a>
 <p><a href="lab2/shkutyak_lab2.html">Лабораторна робота №2</a>
 <p><a href="lab3/shkutyak_lab3.html">Лабораторна робота №3</a>
+<p><a href="lab4/shkutyak_lab4.html">Лабораторна робота №4</a>
 </body>
 </html>
