--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <p><a href="lab2/shkutyak_lab2.html">Лабораторна робота №2</a>
 <p><a href="lab3/shkutyak_lab3.html">Лабораторна робота №3</a>
 <p><a href="lab4/shkutyak_lab4.html">Лабораторна робота №4</a>
+<p><a href="lab5/shkutyak_lab5.html">Лабораторна робота №5</a>
 </body>
 </html>
