--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <p><a href="lab3/shkutyak_lab3.html">Лабораторна робота №3</a>
 <p><a href="lab4/shkutyak_lab4.html">Лабораторна робота №4</a>
 <p><a href="lab5/shkutyak_lab5.html">Лабораторна робота №5</a>
+<p><a href="lab6/shkutyak_lab6.html">Лабораторна робота №6</a>
 </body>
 </html>
