--- a/lab5/shkutyak_lab5.html
+++ b/lab5/shkutyak_lab5.html
@@ -1,3 +1,4 @@
+
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="style/shkutyak_style.css">
@@ -17,7 +18,7 @@
         <aside>
         <article>
 <a name="general"></a>
-<h2><bdi>Загальна характеристик</bdi></h2>
+<h2><bdi>Загальна характеристика</bdi></h2>
 <p>
     Корисні копалини складаються з <mark>мінералів</mark> — природних хімічних <mark>сполук</mark>
     або самородних <mark>елементів</mark>, приблизно однорідних за хімічним складом
