--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="index_style.css" >
 <meta charset="utf-8">
 <title>Лабораторні роботи</title>
 </head>
 <body>
 <h1>Лабораторні роботи</h1>
-<p><a href="lab1/shkutyak_lab1.html">Лабораторна робота №1</a>
-<p><a href="lab2/shkutyak_lab2.html">Лабораторна робота №2</a>
-<p><a href="lab3/shkutyak_lab3.html">Лабораторна робота №3</a>
-<p><a href="lab4/shkutyak_lab4.html">Лабораторна робота №4</a>
-<p><a href="lab5/shkutyak_lab5.html">Лабораторна робота №5</a>
-<p><a href="lab6/shkutyak_lab6.html">Лабораторна робота №6</a>
+<p><a href="lab1/shkutyak_lab1.html" style="color: burlywood;">Лабораторна робота №1</a>
+<p><a href="lab2/shkutyak_lab2.html" style="color: burlywood;">Лабораторна робота №2</a>
+<p><a href="lab3/shkutyak_lab3.html" style="color: burlywood;">Лабораторна робота №3</a>
+<p><a href="lab4/shkutyak_lab4.html" style="color: burlywood;">Лабораторна робота №4</a>
+<p><a href="lab5/shkutyak_lab5.html" style="color: burlywood;">Лабораторна робота №5</a>
+<p><a href="lab6/shkutyak_lab6.html" style="color: burlywood;">Лабораторна робота №6</a>
+<p><a href="lab7/shkutyak_lab7.html" style="color: burlywood;">Лабораторна робота №7</a>
 </body>
 </html>
