--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 <p><a href="lab5/shkutyak_lab5.html" style="color: burlywood;">Лабораторна робота №5</a>
 <p><a href="lab6/shkutyak_lab6.html" style="color: burlywood;">Лабораторна робота №6</a>
 <p><a href="lab7/shkutyak_lab7.html" style="color: burlywood;">Лабораторна робота №7</a>
+<p><a href="shkutyak/shkutyak.html" style="color: rgb(115, 255, 110);">Самостійна робота</a>
 </body>
 </html>
